testdata/invalid/invalid_inlinesegment.book
# Comment
@some/test.pi

# Invalid inline segment:
> GET https://example.com/
InvalidHeader
< 200